[gd_scene load_steps=8 format=3 uid="uid://cblg6tow34qeb"]

[ext_resource type="Texture2D" uid="uid://c6xxixy57c1ji" path="res://graphics/other/purple.png" id="1_5xv2t"]
[ext_resource type="PackedScene" uid="uid://5up8kygpkrbk" path="res://scenes/player.tscn" id="1_sgcdk"]
[ext_resource type="Script" path="res://scripts/level.gd" id="4_doime"]
[ext_resource type="PackedScene" uid="uid://brv13kol3tw58" path="res://scenes/ui.tscn" id="4_f31ts"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwi73"]
size = Vector2(40, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0xuk"]
size = Vector2(1360, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_ubtaa"]

[node name="Level" type="Node2D"]
script = ExtResource("4_doime")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(639, 360)
scale = Vector2(42.1406, 25.1277)
texture = ExtResource("1_5xv2t")
metadata/_edit_lock_ = true

[node name="Stars" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("1_sgcdk")]

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="BorderRight" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderRight"]
position = Vector2(1300, 360)
shape = SubResource("RectangleShape2D_vwi73")

[node name="BorderLeft" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderLeft"]
position = Vector2(-20, 360)
shape = SubResource("RectangleShape2D_vwi73")

[node name="BorderTop" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderTop"]
position = Vector2(640, -20)
shape = SubResource("RectangleShape2D_g0xuk")

[node name="BorderBottom" type="StaticBody2D" parent="Borders"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BorderBottom"]
position = Vector2(640, 740)
shape = SubResource("RectangleShape2D_g0xuk")

[node name="Meteors" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Lasers" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Powerups" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ubtaa")

[node name="UI" parent="." instance=ExtResource("4_f31ts")]

[node name="Timers" type="Node2D" parent="."]

[node name="MeteorTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="ShieldTimer" type="Timer" parent="Timers"]

[node name="RapidFireTimer" type="Timer" parent="Timers"]

[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="timeout" from="Timers/MeteorTimer" to="." method="_on_meteor_timer_timeout"]
[connection signal="timeout" from="Timers/ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="Timers/RapidFireTimer" to="." method="_on_rapid_fire_timer_timeout"]
